# django-chit-chat

./: Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pythonpackage.yml  release.yml
chit_chat/: admin.py  ckc_conf.py  consumer_serializers.py  consumers.py  models.py  routing.py  serializers.py  utils.py  viewsets.py
chit_chat/migrations/: 0001_initial.py  0002_alter_room_members.py  0002_room_members_temp.py  0003_remove_room_members.py  0004_auto_20220331_2234.py
chit_chat/templates/: test_chat.html
testproject/: routing.py  settings.py  urls.py
testproject/testapp/: factories.py  models.py  serializers.py
testproject/testapp/migrations/: 0001_initial.py
tests/integration/: test_chat.py  test_chat_async.py  test_default_user_create_mixin.py  test_factories.py  test_soft_delete.py
