[flake8]
ignore = E501,F405,W605,W504

# Flake plugins:
inline-quotes = single
accept-encodings = utf-8
isort-show-traceback = True

# Docs: https://github.com/snoack/flake8-per-file-ignores
# You can completely or partially disable our custom checks,
# to do so you have to ignore `Z` letter for all python files:
per-file-ignores =
    ./wsgi.py: E402
    ./settings/*.py: F403

    # Ignore pass strings like "()[]{}|\`~!@#$%^&*_-+=;:'\",<>./?"
    ./apps/profiles/password_validators.py: W605

# Ignore Key:
#       E501  --  line too long
#       F405  --  name may be undefined, or defined from star imports
#       F403  --  unable to detect undefined name
#       W605  --  invalid escape sequence
#       W504  --  line break after binary operator


[tool:pytest]
addopts = --reuse-db
DJANGO_SETTINGS_MODULE = testproject.settings
python_paths = testproject
python_files =
    tests/integration/*.py
    tests/functional/*.py
test_paths =
    tests/

[metadata]
name = django-chit-chat
author = Bailey Trefts
author_email = bailey@ckcollab.com
description = chat for projects we help maintain @ ckc
version = 0.0.3
url = https://github.com/ckc-org/django-chit-chat
keywords =
  django
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Programming Language :: Python :: 3.8
  Topic :: Software Development
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe: False
;scripts =
;#  joesprint.py
;install_requires =
;#  colorama

;[options.extras_require]
;tests =
;  pytest
;  flake8

;[options.entry_points]
;console_scripts =
;#  joesprint = joesprint:main
